scripts/nullness/original/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8.txt
../original/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Main.java:69: error: [initialization.fields.uninitialized] the constructor does not initialize fields: weibull
    public  Main(){
            ^
../original/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Cola.java:44: error: [return] incompatible types in return.
        return datoAuxiliar;
               ^
  type of expression: @Initialized @Nullable Pasajero
  method return type: @Initialized @NonNull Pasajero
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
